Rerecorded provider tests for v1.10.* above

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,8 +83,8 @@ jobs:
       # '1.6.*' end of security support 10 Apr 2024
       # '1.7.*' end of security support 26 Jun 2024
       # '1.8.*' end of security support 26 Nov 2024
+      # '1.9.*' #end of security support 27 Feb 2025
         terraform:
-          - '1.9.*' #end of security support 27 Feb 2025
           - '1.10.*'
           - '1.11.*'
     steps:
