Changed lint configuration

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Run linters
         uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v3.7.1
         with:
-          version: v1.63.4
-          skip-cache: true
+          version: latest
 
   generate:
     if: github.event.pull_request.draft == false
