--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,7 @@ jobs:
         uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v3.7.1
         with:
           version: latest
+          skip-cache: true
 
   generate:
     if: github.event.pull_request.draft == false
